# WeatherWear

./: .gitignore  README.md  conditional_probability_table_CPT.csv  pyproject.toml  render.yaml  requirements.txt  weather-predictor.ipynb
src/weatherwear/: agent.py  cli.py  country_cities.json  data.py  explain.py  model.py  outfit.py  types.py  weather.py  webapp.py
web/static/: styles.css
web/templates/: index.html
